test/compile-fail/resolution/conflicts/entity/expected.txt
error: the port `clk` is defined multiple times
  ┌─ ./test/compile-fail/resolution/conflicts/entity/top.rhdl:2:8
  │
2 │     in clk: x,
  │        --- previous definition of the port `clk` here
3 │     out clk: x
  │         ^^^ `clk` redefined here

